--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "name": "Ovos Santa Clara",
   "short_name": "Ovos Santa Clar",
   "scope": "/",
-  "display": "browser",
+  "display": "standalone",
   "start_url": "https://ovos-santaclara.netlify.app/",
   "background_color": "#e9e9e9",
   "theme_color": "#9bca24",
